--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="banner"></div>
-        <div class="slides">
-            <div class="slide">
-                <img src="/src/bubassauro-n0001.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="/src/cubone-n0104.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="/src/ditto-n132.jpeg" alt="">
-            </div>
-            <div class="slide">
-                <img src="/src/gastly-n0092.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="/src/jigglypuff-n0039.png" alt="">
+    <section>
+        <h1>pokemon</h1>
+        <p>Na squale</p>
+        <p>ht 2'04"</p>
+        <div class="banner container" id="bannerExemplo">
+            <div class="slides">
+                <div class="slide">
+                    <img src="./imagens/bubassauro-n0001.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/cubone-n0104.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/jolteon-n1035.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/gastly-n0092.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/jigglypuff-n0039.png" alt="">
+                </div>
+            </div>        
+
+            <div class="pagination">
+                <div class="page active"></div>
+                <div class="page"></div>
+                <div class="page"></div>
+                <div class="page"></div>
+                <div class="page"></div>           
             </div>
 
+            <div class="buttons">
+                <button onclick="prevPage();">ANTERIOR</button>
+                <button onclick="nextPage();">PROXIMO</button>
+            </div>    
+        
         </div>
-    </div>
-    <script src="/main.js"></script>
+    </section>
+
+    <script src="./main.js"></script>
 </body>
 </html>
